--- a/main.tex
+++ b/main.tex
@@ -108,7 +108,7 @@ The first section explains, by the Holographic Principle, \textit{why large numb
 \section {Internal Fine Tuning and Canonical Large Numbers}
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics.
 \subsection {The Cosmic Fine-Tuning and the Topological Axis}
-\markright{F. M. Sanchez, \ V. A. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\ Back to Cosmos}
 
 The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
@@ -618,7 +618,7 @@ $t^{\prime}_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
 confirms the above Planck's wall breakdown.
 
 \section{Intermediate Mathematical Constants}
-\markright{F.M. Sanchez, \ V.A. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\ Back to Cosmos}
 \subsection{The eddington's constant 137}
 
 The initial Eddington's proposal for $a$ was the whole number 136, as the number of independent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
@@ -1011,7 +1011,7 @@ $$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}$$
 confirming the role of the dimension 496 and Atiyah's symmetry between $\pi$ and $a$. 
 
 \section {Discussion}
-\markright{F.M. Sanchez, \ V.A. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\ Back to Cosmos}
 
 There is presently an intense debate in physics community. Only a minority believes in a Single
 Final Theory, while a large majority have abandoned such hope and believes seriously in the extreme
@@ -1061,7 +1061,7 @@ The pertinence of our simple polynomial relations cannot be admitted by the stan
 Finally, there is the problem of infinity. While it is wellcome in mathematics, it is condamned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalisation of $e$ and $\pi$. This have been shown in this article.
 
 \section {Conclusions Simplicity at work}
-\markright{F.M. Sanchez, \ V.A. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\ Back to Cosmos}
 
 The application of the old direct scientific method, looking for fine tuning between physical
 parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
