--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@ This new scanning space-time structure is confirmed by a single-electron cosmolo
 \setcounter{page}{1}
 
 
-\markboth{F.M. Sanchez, \ V.A. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}{\thepage}
+\markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\ Back to Cosmos}{\thepage}
 
 \section{Deterministic Computation and Hierarchy Principle}
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31) known with 0.23 ppb precision and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
@@ -618,7 +618,7 @@ $t^{\prime}_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
 confirms the above Planck's wall breakdown.
 
 \section{Intermediate Mathematical Constants}
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\ Back to Cosmos}
+\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
 \subsection{The eddington's constant 137}
 
 The initial Eddington's proposal for $a$ was the whole number 136, as the number of independent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
@@ -946,8 +946,6 @@ term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
 \end{equation}
 This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of present Particle Physics standard model
 
-
-
 \subsection {The Intermediate Bosons mathematical fine tuning}
 
 The computer indicates, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$:
@@ -1011,7 +1009,7 @@ $$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}$$
 confirming the role of the dimension 496 and Atiyah's symmetry between $\pi$ and $a$. 
 
 \section {Discussion}
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\ Back to Cosmos}
+\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
 
 There is presently an intense debate in physics community. Only a minority believes in a Single
 Final Theory, while a large majority have abandoned such hope and believes seriously in the extreme
@@ -1061,7 +1059,7 @@ The pertinence of our simple polynomial relations cannot be admitted by the stan
 Finally, there is the problem of infinity. While it is wellcome in mathematics, it is condamned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalisation of $e$ and $\pi$. This have been shown in this article.
 
 \section {Conclusions Simplicity at work}
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\ Back to Cosmos}
+\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
 
 The application of the old direct scientific method, looking for fine tuning between physical
 parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
@@ -1188,8 +1186,6 @@ Submitted on April 1st, 2019 / Accepted on April 6th, 2019
 
 
 \begin{thebibliography}{99}\footnotesize
-
-
 
 \bibitem{1} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
 Nature 278, 605-612 (1979). % Here is referred book
