--- a/main.tex
+++ b/main.tex
@@ -1283,6 +1283,7 @@ l'espace euclidien à six dimensions. C.R. Acad. Sci. Paris, t. 305, Série II, 
 
 \bibitem{33} Atiyah M., private communication (December 2018)
 
+%\bibitem{34} Grosmann, M and Rebordão, José and Meyrueis, Patrick. Propagation Of Waves In Optical Systems: Reformulation Of Huyghens Principle For Aspheric Systems. Proceedings of SPIE - The International Society for Optical Engineering. DOI 10.1117/12.968010. 02.1985
 
 \end{thebibliography}
 \vspace*{-6pt}
