--- a/main.tex
+++ b/main.tex
@@ -42,12 +42,12 @@
 \renewcommand{\baselinestretch}{1.0}
 \bigskip
 F. M. Sanchez$^1\!$, \ V. A. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ R. Veysseyre$^5$, \ C. Bizouard$^6$, \ N. Flawisky$^7$, \ D. Gayral$^8$, \ L. Gueroult$^9$\\
-{\footnotesize  $^1$Retired Pr. Universite Paris 11, Orsay, France.\rule{0pt}{12pt}
+{\footnotesize  $^1$ Pr. Universite Paris 11, Orsay, France (retired).\rule{0pt}{12pt}
 E-mail: hol137-at-yahoo-dot-com\\
 $^2$Astronomer Crimean Astrophysical Observatory CrAO, Nauchny, Crimea, Russian Federation.
-$^3$Retired Pr. at Universite Louis Pasteur Strasbourg, France.
-$^4$Retired Pr. at Universite of Dijon and Paris 6, France.
-$^5$Retired Pr. at Ecole Centrale, Paris, France.
+$^3$ Pr. at Universite Louis Pasteur Strasbourg, France (retired).
+$^4$ Pr. at Universite of Dijon and Paris 6, France (retired).
+$^5$ Pr. at Ecole Centrale, Paris, France (retired).
 $^6$Astronomer at OBSPM, Paris, France.
 $^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
 $^8$Computer Science Engineer.
@@ -57,16 +57,8 @@ $^9$Retired Maitre de Conference at Ecole Nationale Superieure d'Architecture Pa
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
-The ancestral concept of Cosmos is rediscovered through the idea of a Tachyonic Grandcosmos Multi-basis Computer, inversing the Anthropic Principle and reestablishing the Laplace Determinism.
-The observed fine-tuning of Nature between Physical dimensionless parameters is interpreted as relations between optimal calculation basis, announcing a progress in scientific computing.
-Three types of mathematical constants are considered: large, intermediate and close to unity. The famous Large Number problem is resolved by Eddington's statistical theory and the gravitational Hydrogen Molecule model, leading to the visible Universe horizon radius $R$ $\approx$ 13.812 Gly.
-The extension of the double cosmic correlation defines a Topological Axis using Euler-Napier constant $e$ as primary basis, confirming String Theory, Cartan-Bott periodicity and the 30 holic dimensions corresponding to the simplest physical diophantine equation T$^2\!$ = L$^3\!$ = M$^5\!$ = N$^{30}\!$.
-This dimension n = 30 corresponds to the common time, about 10$^{58}\!$ s, given by two mandatory dimensional analysis, interpreted as the Supercycle period.
-The visible Universe wavelength `Topon`: 2$G$$\hbar$/$R$c$^3\!$ $\approx$ 4 $\times$ 10$^{-96}\!$ m, corresponds to $n \approx$ 2e$^e\!$ and enters the 1D mono-radial holographic extension of the Bekenstein-Hawking Universe entropy, implying the critical condition, and breaking Planck's wall by a factor 10$^{61}\!$.
-The monochromatic holographic extension leads to a Grandcosmos, larger than the visible Universe by the same factor 10$^{61}\!$.
-This implies a tachyonic speed in the same ratio by respect to $c$, justifying the Planck renormalization of the Vacuum Energy, independently checked by the Casimir effect.
-The couple Universe-Grandcosmos is confirmed by a dramatic geo-dimensional analysis, where logarithms of Length, Time and Mass ratios are considered as vectors in a 3D Super-space. A matter-antimatter 10$^{104}\!$ Hz Oscillatory Bounce unifies standard Single Bang with steady-state cosmology, but suppress Relativity in cosmology at large, reestablishing the Newton Absolute Space-Time realized by the Microwave Cosmic Radiation, while Kotov cycle defines an absolute clock.
-This new scanning space-time structure is confirmed by a single-electron cosmology, connected with Kotov period, relying on Sternheimer's Scale Factor $j$ and Atiyah's constant $\Gamma$, which appear as privileged computational basis, as well as e, $\pi$ and $a$ $\approx$ 137.036, in liaison with the sporadic groups. While $j$ shows overwhelming biological pertinence, $\Gamma$ and Eddington's constant 137 enter dramatic ppb ($10^{-9}$) precision relations with particle data. This predics unificaton of mathematics, informatics, physics, chemistry and biology. The future telescopes will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle. The physical dimensionless parameters are interpreted as optimal calculation basis and are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with emphasis on the values 26 (Universe) and 10 (Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor $10^{61}$, resolving the vacuum energy dilemma. An holographic scanning explains at last the Universe vastness, justifying the pertinence of large numbers, such as the Eddington's one which appears as the number of neutrons in the trivial ratio 3/10 of the visible Universe, so justifying black matter existence. The galaxy recession and the massive black holes are both associated to the second thermodynamics principle. The supercycle period is given by the dimensional analysis, and linked to the holic dimension 30 and, throught the Monster group order, to the Kotov's absolute clock period. This confirms the matter-antimatter Oscillatory Bounce (frequency $10^{104}$~Hz), unifying the standard Single Bang cosmology with the Steady-State one, and the return to the Newton's absolute space-time, realized by the cosmic microwave radiationn, considered as the Grandcosmos emanation. The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's constant. It is predicted that Koide relation will deblock Particle Physics and that future telescopes will find mature galaxies at very large distances (instead of a dark space), ruining thus the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
+
 %% TODO: Insérer axe topologique
 }}\smallskip
 \end{center}]{%
