--- a/main.tex
+++ b/main.tex
@@ -118,7 +118,7 @@ most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value m
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$,
 value.
 
-Consider the wavelength $$\lambdabar_{M} = \hbar /Mc = 4 \cdot 10^{-96} m$$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
+Consider the wavelength $$\lambdabar_{M} = \hbar /Mc approx 4 \cdot 10^{-96} m$$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to $n \approx 2e^{e}$, to $0.01\%$. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
 and results from the imbrication of relations of the form 
 $
@@ -281,7 +281,7 @@ The immensity of the Cosmos thus receives a computational holographic explanatio
 than that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with
 extreme precision, even with inflation. 
 
-With $N_{Ed} = 136 \cdot2^{256}$ the Eddington's large number, one observes that $N_{Ed}$ times the neutron mass, corrected by the ratio $H/p$, central in Section 4, gives, to 41 ppm the effective mass $3M/10$,so that:
+With $N_{Ed} = 136 \cdot2^{256}$ the Eddington's large number, one observes that $N_{Ed}$ times the neutron mass, corrected by the ratio $H/p$, central in Section 4, gives, to 41 ppm the effective mass $3M/10$, so that:
 \begin{equation}
 Mm_p = m_P^4/m_em_H\approx(10N_{Ed}/3)m_Hm_n 
 \end{equation}
@@ -294,7 +294,7 @@ Holographic Relation, using the wavelengths of the electron, proton and hydrogen
 \end{equation}
 The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
 background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
-This eliminates $l_{P}$, producing a relation independent of $G$, implying $\Theta_{CMB} \approx 2.725820805$ Kelvin:
+This eliminates $l_{P}$, producing a relation independent of $G$, implying $\T_{CMB} \approx 2.725820805$ Kelvin:
 $$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
 which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $ proving the relevance of
 the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 4). Recall
@@ -306,7 +306,7 @@ Coming back to the central mass relation:
 m_{P}^{4}\, = M m_{e} m_{p} m_{H}
 \end{equation}
 this directly involves Planck's mass $m_{P}$, which at the present time, has no known interpretation, except
-that it is close to the mass of the human ovocyte. In this way, the local inertia is related to the distant
+that it is close to the mass of the human ovocyte [3]. In this way, the local inertia is related to the distant
 masses, in accordance with the Mach principle, which the relativity theory does not explain.
 Another shortcoming of this theory is that it does not define any inertial frame. However, the
 Doppler assymmetry of the cosmic background indicates that the speed of our local group of galaxies is about
@@ -363,7 +363,7 @@ t_{K} / t_{e} = (a_{G} a_{w})^{1/2}
 The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy 
 $
 E_{F} \approx 292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}
-$, itself tied to the wea1k force constant 
+$, itself tied to the weak force constant 
 $
 G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \cdot 10^{-62} Joule \cdot m^{3}
@@ -415,7 +415,7 @@ objects; see Kotov, 2018). The peak of the best commensurability corresponds to 
 9594(65) s, which coincides well, within the error limits, with $t_K$ at about $5.3 \theta$ C.L., i.e. with a
 chance probability $10^{-7}$.
 
-It seems very puzzling also that the spatial scale $t_{K} \approx 19.24$ A.U. occurs to be the best
+It seems very puzzling also that the spatial scale $l_{K} \approx 19.24$ A.U. occurs to be the best
 commensurate with orbital sizes of the main planetary orbits of the solar system, - see Fig. 3,
 where the resonance spectrum $F( \nu )$ is plotted for 11 orbits, including those of asteroid belt, Pluto
 and Eris (orbital «diameters» were approximated by the major axes, and for the inner orbits they
@@ -519,7 +519,7 @@ Moreover, to $10^{-7}$, corresponding to $7 \times 10^{-6}$ precision on the abo
 ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx exp(4e – 1/a)
 \end{equation}
  
-This is a dramatic geometrical confirmation for the visible Universe – Grandcosmos holographic couple, confirming the B.I.P.M. measurement of $G$ [11].
+This is a dramatic geometrical confirmation (Fig. 6) for the visible Universe – Grandcosmos holographic couple, confirming the B.I.P.M. measurement of $G$ [11].
 
 
 \begin{figure}[h]
@@ -611,7 +611,7 @@ confirms the above Planck's wall breakdown.
 
 \section{Intermediate Mathematical Constants}
 \markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
-\subsection{The eddington's constant 137}
+\subsection{The Eddington's constant 137}
 
 The initial Eddington's proposal for $a$ was the whole number 136, as the number of independent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
 series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory (a synthesis of five string theories) and the 4 of space-time. Indeed:
@@ -628,7 +628,7 @@ that the basic precept `all occurs in the pole` was forgotten in this case.
 
 As ancient Egyptian used only fractions of type $1/n$, they were certainly aware of this particular harmonic series: 
 $$S_{5} = 137/60$$
-Indeed it appears in the Ptolemaic approximation for $\pi$: $$\pi_Pt = 377/120 = 2 +  S_{5}/2$$
+Indeed it appears in the Ptolemaic approximation for $\pi$: $$\pi_{Pt} = 377/120 = 2 +  S_{5}/2$$
 
 Recall that the electrical constant $a$ characterizes the force $$F =\hbar c/al^{2}$$ between two l-distant
 elementary charges, where $a$ appears central in Atomic Physics and in many fine-tuning relations [1]. It is
@@ -639,11 +639,11 @@ following shows that 137 plays a central role in fine-tuning analysis.
 
 One may interpret 137 + 1 as
 the sum of the numbers of dimensions in the Topological Axis [3], taking into account the double
-point for the superstring value n = 10, and the remarkable sum:
+point (H atom-Pion couple) for the superstring value n = 10, and the remarkable sum:
 \begin{equation}
 \sum_{k=7}^{k=0}(2 + 4 k ) = 2^{7}
 \end{equation}
-So $137 = 2^{7} - 1 + 3 + 7$, the Hierarchic Combination form [3]. But this appears also as 137 = 135 + 2,
+So $137 = 2^{7} - 1 + 3 + 7$, the Combinatorial Hierarchy form [3]. But this appears also as 137 = 135 + 2,
 with the dimension 2 of the String patent. In particular, one obtains the value $a \approx 137.035999119$
 compatible with measurement $a \approx 137.035999139(31)$ in:
 \begin{equation}
@@ -658,7 +658,7 @@ confirms the role of the basis 3.
 \subsection{The Arithmetical Logic : Holic Principle}
 
 In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
-simplest one is $T^{2} = L^{3}$ , where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are co-
+simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are co-
 prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study [18].
 
 This is the degenerate arithmetic form of the spatio-temporal holographic principle.
@@ -770,7 +770,7 @@ O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \hbar Gc^{5}/E_{Ryd}^{2}
 \end{equation}
 Moreover the above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm:
 $$e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}$$
-implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Higgs boson in the Topological Axis (Fig.1). The Bizouard constant, precizing the inverse of the standard 'strong coupling constant 0.1184(7), $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appars as a computation basis, and the above relation implies, to 61 ppm:
+implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Higgs boson in the Topological Axis (Fig.1). The Bizouard constant, precizing the inverse of the standard 'strong coupling constant 0.1184(7), $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation basis, and the above relation implies, to 61 ppm:
 \begin{equation}
 lnf\approx \pi e/4d_e
 \end{equation}
@@ -794,7 +794,7 @@ Note that $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \a
 $$O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx  n_{ph}/\delta^{1/2} $$
 where $$n_{ph}\approx (3/\pi) exp(e^6/2)$$ (to 0.2 \%) is the photon number in the visible universe. Therefore 496, $p$ and $g_0$ are also privileged computations bases. 
 
-From the above relation, by taking the $137^th$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$
+From the above relation, by taking the $137^{th}$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$
 This proves the close imbrication of the optimal bases.
 
 \section{Fine-tuning with basic mathematical constants}
@@ -804,10 +804,10 @@ relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
 0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
 
-\subsection {The Euler constant e is confirmed as the optimal calculation basis}
+\subsection {Grandcosmos confirms e as optimal calculation basis}
     The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
 \begin{equation}
-f(k = e^{2}) = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
+f(k = e^{2}) = exp(2^{e^{2+1/2}}) \approx exp(e^{2e}+e^{2})
 \end{equation}
 where the supplementary term $exp(e^2)$ is close to $a^{3/2}$. Note these properies of the 'economic number', to 
 0.4 \%, 6 ppm, 46 ppm, 0.04 \%  
