--- a/main.tex
+++ b/main.tex
@@ -294,7 +294,7 @@ Holographic Relation, using the wavelengths of the electron, proton and hydrogen
 \end{equation}
 The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
 background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
-This eliminates $l_{P}$, producing a relation independent of $G$, implying $\T_{CMB} \approx 2.725820805$ Kelvin:
+This eliminates $l_{P}$, producing a relation independent of $G$, implying $T_{CMB} \approx 2.725820805$ Kelvin:
 $$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
 which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $ proving the relevance of
 the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 4). Recall
