--- a/main.tex
+++ b/main.tex
@@ -804,7 +804,7 @@ relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
 0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
 
-\subsection {Grandcosmos confirms e as optimal calculation basis}
+\subsection {Grandcosmos shows e as optimal calculation basis}
     The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
 \begin{equation}
 f(k = e^{2}) = exp(2^{e^{2+1/2}}) \approx exp(e^{2e}+e^{2})
@@ -836,7 +836,7 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 \begin{equation}
 2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/ln\tau
 \end{equation}
-where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Higgs-Boson/Electron, corresponding to 125.6 GeV, and corresponds in the Topological Axis to $k \approx \pi $, correspondong to $n \approx \gamma \Gamma$ (Fig. 1).
+where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
 The above study of fractional development of e leads to the following relation between $a$ and the Electron magnetic moment $2d_e$, in the ppb range: :$$a(e/2d_e-1) \approx 7^2-1/4d_e(496+1)$$ Note that $496 + 1 = 7 \times 71$, showing the largest prime 71 in the Monster cardinal.
 
 
@@ -847,14 +847,14 @@ of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ a
 A confirmation of a symmetry between $a$ and 137 is the following relation involving $H$, the
 Hydrogen electron mass ratio, precise to 83 ppb:
 $$a/137 \approx (6\pi^{5} H)^{1/2} /p$$
-One observe that the rejection of Wyler's work, due to a non-perfect formula for the $p$ and $a$ values, is a new
+One observes that the rejection of Wyler's work, due to a non-perfect formula for the $p$ and $a$ values, is a new
 manifestation of the general neglectance of the Hierarchy Principle.
 
 A confirmation of a symmetry between $a$ and 137 is the two following approximations for $p$ with the same imprecision 80 ppb, so leading to the ppb relation:
  $$p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $$ 
 where $D = 196883$ is the Moonshine Monster dimension [23], which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. 
 
-Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence, because this relation has long time been deduced from basic considerations on quarks [3]. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 which is close to $H$, while the combination $udd \approx (n/a)^2 $, with $n$ the neutron-electron mass ratio. This leads to (0.012 \%) $$6\times 5^5 \approx (aH/n)^2 $$  
+Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence, because this relation has long time been deduced from basic considerations on quarks [3]. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $, with $n$ the neutron-electron mass ratio. This leads to (0.012 \%) $$6\times 5^5 \approx (aH/n)^2 $$  
 Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
 $$R_{GC}/\lambdabar_e \approx q5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
 leading to the approximation for the celerity ratio $$ C/c\approx3^{128} \sqrt{ln2/2}$$ and confirming the role of bases $u = 5$ and $d = 6$, leading to (2.6 \%):
@@ -945,7 +945,7 @@ The computer indicates, with the neutron/electron mass ratio $n \approx 1838.683
 W \approx \gamma a 137^{2} / 3\pi d_{e}
 \end{equation}
 \begin{equation}
-Z \approx ap^{2} \pi^{4} / 137 \cdot d_{e} n
+Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
 Considering the above values, the relation
 \begin{equation}
@@ -993,9 +993,10 @@ Bearing in mind that:
 \begin{equation}
 m_{e} c^{2} f(\gamma\Gamma) \approx 125.175 GeV
 \end{equation}
-is compatible with the Higgs Boson energy, it is interesting to note the perfect match with the dimension index $k \approx \pi$, leading to $$\gamma\Gamma \approx 4\pi + 2$$. The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich cycle. One obtains also :
+is compatible with the Higgs Boson energy, it is interesting to note the perfect match with the dimension index $k \approx \pi$, leading to $$\gamma\Gamma \approx 4\pi + 2$$
+The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich cycle. One obtains also :
 $$\Gamma \approx e^\pi + 2$$
-meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n = \Gamma$.
+meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n approx \Gamma$.
 One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
 $$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}$$
 confirming the role of the dimension 496 and Atiyah's symmetry between $\pi$ and $a$. 
@@ -1015,7 +1016,7 @@ implies Life, in contradiction with the Darwin `accidental life` approach, a gen
 called `theory` with too much missing links [26]. The fundamental hypothesis of
 this article is that the Cosmos is like a computer. A common point with the brain is the multi-base
 character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi
-question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a
+question `where are they` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a
 dogmatic community.
 
 Another type of separation exists, but with not any debate: only a small minority thinks Physics
@@ -1050,7 +1051,7 @@ The pertinence of our simple polynomial relations cannot be admitted by the stan
 
 Finally, there is the problem of infinity. While it is wellcome in mathematics, it is condamned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalisation of $e$ and $\pi$. This have been shown in this article.
 
-\section {Conclusions Simplicity at work}
+\section {Conclusions : cosmic simplicity at work}
 \markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
 
 The application of the old direct scientific method, looking for fine tuning between physical
