--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@ $^9$Retired Maitre de Conference at Ecole Nationale Superieure d'Architecture Pa
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle. The physical dimensionless parameters are interpreted as optimal calculation basis and are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with emphasis on the values 26 (Universe) and 10 (Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor $10^{61}$, resolving the vacuum energy dilemma. An holographic scanning explains at last the Universe vastness, justifying the pertinence of large numbers, such as the Eddington's one which appears as the number of neutrons in the trivial ratio 3/10 of the visible Universe, so justifying black matter existence. The galaxy recession and the massive black holes are both associated to the second thermodynamics principle. The supercycle period is given by the dimensional analysis, and linked to the holic dimension 30 and, throught the Monster group order, to the Kotov's absolute clock period. This confirms the matter-antimatter Oscillatory Bounce (frequency $10^{104}$~Hz), unifying the standard Single Bang cosmology with the Steady-State one, and the return to the Newton's absolute space-time, realized by the cosmic microwave radiationn, considered as the Grandcosmos emanation. The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's constant. It is predicted that Koide relation will deblock Particle Physics and that future telescopes will find mature galaxies at very large distances (instead of a dark space), ruining thus the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle, and interpretating the physical dimensionless parameters as optimal calculation basis. The later are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with emphasis on the values 26 (Universe) and 10 (Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor $10^{61}$, resolving the vacuum energy dilemma. An holographic scanning explains at last the Universe vastness, justifying the pertinence of large numbers, such as the Eddington's one which appears as the number of neutrons in the trivial ratio 3/10 of the visible Universe, so justifying black matter existence. The galaxy recession and the massive black holes are both associated to the second thermodynamics principle. The supercycle period is given by the dimensional analysis, and linked to the holic dimension 30 and, throught the Monster group order, to the Kotov's absolute clock period. This confirms the matter-antimatter Oscillatory Bounce (frequency $10^{104}$~Hz), unifying the standard Single Bang cosmology with the Steady-State one, and the return to the Newton's absolute space-time, realized by the cosmic microwave radiationn, considered as the Grandcosmos emanation. The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's constant. It is predicted that Koide relation, massive gluons and composite d quark will deblock Particle Physics and that future telescopes will find mature galaxies at very large distances (instead of a dark space), ruining thus the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
 
 %% TODO: Insérer axe topologique
 }}\smallskip
@@ -74,28 +74,28 @@ The antique concept of permanent Cosmos is reintroduced as a perfect determinist
 \markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\ Back to Cosmos}{\thepage}
 
 \section{Deterministic Computation and Hierarchy Principle}
-It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31) known with 0.23 ppb precision and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
+It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
 
 One can read [1]: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
-The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{ancestral Cosmos concept, which, as Eddington claimed [2], must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology [3].
+The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed first [2], must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology [3].
 
-So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as  'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe [1].
+So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe [1].
 
-The present article shows that \textit{Physics is a special part of mathematics}, refuting the Multiverse Hypothesis by precise fine-tuning between main physical and biological parameters, involving main mathematical constants in particle physics: $\pi$,  $e$ and $\gamma$, the Euler-Mascheroni constant. Also, these relations confirm the super-string theory and rehabilitates the tachyonic bosonic String Theory.
+The present article shows that \textit{Physics is a unique part of Mathematics}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and biological parameters, involving main mathematical constants in particle physics: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, these relations confirm the super-string theory but with complete rehabilitation of the tachyonic bosonic string theory.
 
-\textit{A decisive point of physics is the energy conservation, or the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more logical explication is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions : why does one asks questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics, and three-point temperatures of mammals and main molecules [3 and references therein].
+\textit{A decisive point of physics is the energy conservation, or the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why does people ask questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics, and three-point temperatures of mammals and main molecules [3 and references therein].
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the Copenhagen statistical interpretation of quantum mechanics.
 
-The fact that three parameters, among of about 30, are so clearly emerging means that physics, and more generally science, is hierarchic: \textit{one can progress in science without knowing the details of the underlying fundamental theory.}
+The fact that three parameters, among of about 30, are so clearly emerging means that physics, and more generally science, is hierarchic: \textit{one can progress without knowing the details of the underlying fundamental theory.}
 
-So, when Proust and Dalton found whole numbers in chemical reactions,they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he was prefiguring genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, so enlighting the above Hierarchy Principle.
+So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, probably in liason with the above Hierarchy Principle.
 
 \subsection{Plan}
 This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and the small, close to unity. The optimal computation basis $e$ is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2, the simplest of all (Fig. 1).
 
-The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. In particular, we consider the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), Bizouard ($f$) and Matthieu (7920). The third Section involves mainly the constants $\pi$, $e$ and $\gamma$. 
+The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. We consider mainly the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), Bizouard ($f$) and Matthieu (7920). The third Section involves mainly the constants $\pi$, $e$ and $\gamma$. 
 
 \section {Internal Fine Tuning and Canonical Large Numbers}
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics.
@@ -118,7 +118,7 @@ most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value m
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$,
 value.
 
-Consider the wavelength $$\lambdabar_{M} = \hbar /Mc approx 4 \cdot 10^{-96} m$$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
+Consider the wavelength $$\lambdabar_{M} = \hbar /Mc \approx 4 \cdot 10^{-96} m$$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to $n \approx 2e^{e}$, to $0.01\%$. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
 and results from the imbrication of relations of the form 
 $
